Make copies of ToolLocationHelper methods we are using.

--- a/EnumSDKs.csproj
+++ b/EnumSDKs.csproj
@@ -93,6 +93,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TargetPlatformSDKCopy.cs" />
+    <Compile Include="ToolLocationHelperCopy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
